--------------------------------------------------------------------------------
 Fusion 1.213 - November 12th, 2004
--------------------------------------------------------------------------------
- 01-06-05: Bug tracing in PD_Load_Accounts function. Loading ActiveChars fails (?). [AlexKreuz]
- 01-06-05: Bug tracing in DatabaseLoad function. Item can not be inserted into Item List. [AlexKreuz]
- 01-06-05: Bug tracing in SendCLeave function. Character mapdata invalid. [AlexKreuz]
- 01-05-05: JCon character saves are now instant. [AlexKreuz]
- 01-05-05: Updated backup function to include correct files and correct paths. [AlexKreuz]
- 01-05-05: Added Bugtracker & Forum links to Fusion Menu. [AlexKreuz]
- 01-05-05: OnTouch triggering more stable. [Tsusai]
- 01-02-05: Reindented game.pas; Added Clown/Gypsy support to party handling. [Tsusai]
- 01-02-05: Added #email [password] [new_email] ALBGM command. [AlexKreuz]
- 01-01-05: Packet exchange access violation on character moving. [AlexKreuz]
- 01-01-05: Undefined map blocks on packet sends to players caused crash. [AlexKreuz]
- 01-01-05: Other characters disconnecting while moving caused missend of packet. [AlexKreuz]
- 01-01-05: Added NPC areaset. [Tsusai]
- 12-31-04: Added Packet tracing output switch to weiss.ini. [AlexKreuz]
- 12-31-04: Pets did not load on server restart. [AlexKreuz]
- 12-31-04: Bug #25: Deleting character did not remove chara gamedata. [AlexKreuz]
- 12-31-04: PVP Steal could not access target's inventory caused crash. [AlexKreuz]
- 12-31-04: Memory leak in Thief/Assassin stealing skill. [AlexKreuz]
- 12-31-04: Read-only gm_commands.ini file caused crash. Added dialog. [AlexKreuz]
- 12-30-04: Fixed GM athena commands "h" and "help". [Tsusai]
- 12-30-04: JCon Character Zeny control now ranged [0-2147483647]. [AlexKreuz]
- 12-30-04: Uncapped #ccolor. [Tsusai]
- 12-29-04: Character disconnect map access issues. Using different map assign line. [AlexKreuz]